Changed layout of Welcome, added cover images

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,16 +13,16 @@ article {
 }
 
 h1 {
-    font-size: 35px;
+    font-size: 2.4em;
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 2em;
     font-weight: bold;
 }
 
 h3 {
-    font-size: 22px;
+    font-size: 1.6em;
     font-weight: bold;
 }
 
@@ -46,12 +46,25 @@ h3 {
     @apply bg-red-700;
 }
 
+.btn-green {
+    @apply bg-green-700
+}
+.btn-green:hover,
+.btn-green:active{
+    @apply bg-green-400;
+}
+
+.cover-image{
+    --widthI: 100%;
+    height: calc(var(--widthI)*1.5)
+}
+
 @layer components {
     .btn-link {
-        @apply inline-block px-4 py-2 bg-indigo-700 rounded-md font-bold text-sm text-white uppercase tracking-widest hover:bg-indigo-800 active:bg-indigo-900 focus:ring ring-indigo-300;
+        @apply inline-block px-4 py-2 bg-emerald-700 rounded-md font-bold text-sm text-white uppercase tracking-widest hover:bg-emerald-800 active:bg-emerald-900 focus:ring ring-emerald-300;
     }
     .btn-lg {
-        @apply px-6 py-3;
+        @apply px-6 py-2;
     }
     .btn {
         @apply px-4 py-2 rounded-md font-bold text-sm text-white uppercase tracking-widest focus:ring focus:outline-none;
@@ -59,4 +72,5 @@ h3 {
     .btn-danger {
         @apply bg-red-600 hover:bg-red-700 active:bg-red-700 ring-red-300;
     }
+
 }
