--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,10 +49,18 @@ h3 {
 .btn-green {
     @apply bg-green-700
 }
-.btn-green:hover,
-.btn-green:active{
+.btn-green:hover{
     @apply bg-green-400;
 }
+
+.btn-link {
+        @apply inline-block px-4 py-2 bg-emerald-700 rounded-md font-bold text-sm text-white uppercase tracking-widest hover:bg-emerald-800 active:bg-emerald-900 focus:ring ring-emerald-300;
+    }
+
+.btn-link:hover{
+    hover:bg-emerald-800;
+}
+
 
 .cover-image{
     --widthI: 100%;
