--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -86,3 +86,12 @@ h3 {
     }
 
 }
+
+/*
+Citation - adapted from (Balasa, 2022)
+
+
+Balasa, S. (2022). Laravel 9.0 Essential Training. Linkedin Learning. https://www.linkedin.com/learning/laravel-9-0-essential-training/
+
+
+*/
